@@ -1,3 +1,7 @@
+2011-01-20  Christopher Stelmaszyk  <chrissitopher@gmx.de>
+
+	* Fixed bug #12360: Show error message, if the module is not accessible for the current user
+
 2011-01-19  Michael Miousse  <michael.miousse@infoglobe.ca> 
 
 	* Added Feature #12340: Enhance the tx_linkvalidator_linkTypes_Interface (thanks to Ernesto Baschny and Christopher Stelmaszyk)
